Fix layout issues

--- a/app/components/CustomScrollbars.css
+++ b/app/components/CustomScrollbars.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  height: 100%;
 }
 
 .custom-scrollbars__scrollable {
